<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/ivCompany"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_company"
        app:layout_constraintBottom_toBottomOf="@+id/tvCompany"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvCompany" />

    <TextView
        android:id="@+id/tvCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toEndOf="@+id/ivCompany"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivLocation"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_location"
        app:layout_constraintBottom_toBottomOf="@+id/tvLocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvLocation" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/location"
        app:layout_constraintStart_toEndOf="@id/ivLocation"
        app:layout_constraintTop_toBottomOf="@+id/tvCompany" />

    <ImageView
        android:id="@+id/ivEmail"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_email"
        app:layout_constraintBottom_toBottomOf="@+id/tvEmail"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvEmail" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/email"
        app:layout_constraintStart_toEndOf="@+id/ivEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvLocation" />

    <ImageView
        android:id="@+id/ivBlog"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_blog"
        app:layout_constraintBottom_toBottomOf="@+id/tvBlog"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvBlog" />

    <TextView
        android:id="@+id/tvBlog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/blog_url"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivBlog"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail"/>


</androidx.constraintlayout.widget.ConstraintLayout>