<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailUserActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivDetailImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/ic_profile_pic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:scaleType="centerCrop"/>

            <ProgressBar
                android:id="@+id/progressBarDetail"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayoutFollow"
                app:layout_constraintEnd_toEndOf="@+id/tvDisplayName"
                app:layout_constraintStart_toStartOf="@+id/tvDisplayName"
                app:layout_constraintTop_toTopOf="@+id/ivDetailImage" />

            <TextView
                android:id="@+id/tvDisplayName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/display_name"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivDetailImage" />

            <TextView
                android:id="@+id/tvDetailUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="19sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDisplayName"
                android:gravity="center" />

            <TextView
                android:id="@+id/tvBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/initial_bio"
                app:layout_constraintTop_toBottomOf="@id/tvDetailUsername"
                android:layout_marginTop="8dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"/>

            <LinearLayout
                android:id="@+id/linearLayoutDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvBio">

                <include
                    android:id="@+id/detailList"
                    layout="@layout/detail_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tvBio" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutFollow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/linearLayoutDetail"
                tools:layout_editor_absoluteX="16dp">

                <TextView
                    android:id="@+id/tvFollowing"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/following"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvFollowers"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/follower"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvRepos"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/Repos"
                    android:textStyle="bold"/>

            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardViewTab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/linearLayoutFollow"
                app:layout_constraintStart_toStartOf="@+id/linearLayoutFollow"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutFollow"
                android:layout_marginTop="16dp"
                app:strokeWidth="2dp"
                app:strokeColor="@color/light_green"
                android:layout_marginHorizontal="16dp"
                app:cardCornerRadius="50dp">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabs"
                    android:layout_width="match_parent"
                    app:tabIndicatorGravity="stretch"
                    app:tabIndicatorColor="@color/light_green"
                    app:tabSelectedTextColor="@color/white"
                    app:tabMaxWidth="0dp"
                    android:layout_height="wrap_content"
                    app:tabMode="fixed"
                    app:tabGravity="fill"
                    app:tabTextColor="@color/dark_green" />

            </com.google.android.material.card.MaterialCardView>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/cardViewTab"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:foregroundGravity="bottom"
            app:fabSize="normal"
            android:layout_gravity="end"
            app:srcCompat="@drawable/ic_fav_outline"
            />

    </LinearLayout>

</RelativeLayout>
